objects/rrde__CriteriaField__c.object
<CustomObject>
    <description>This obect has created to set the criteria for fields of  lead and case object.</description>
    <fields>
        <fullName>rrde__Field_Api_Name__c</fullName>
        <description>This field holds the api value of selected field</description>
        <label>Field Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__Field_Data_Type__c</fullName>
        <description>This field holds the Data type of selected object</description>
        <label>Field Data Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__Field_Value__c</fullName>
        <description>This field holds the value of selected field of sobject.</description>
        <label>Field Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__Old_Criteria__c</fullName>
        <label>Old Criteria</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__Operator__c</fullName>
        <defaultValue>&quot;equals&quot;</defaultValue>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                    <default>true</default>
                    <label>equals</label>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rrde__SelectedObject__c</fullName>
        <description>This field is used to store the sobject name.</description>
        <label>Selected Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__Selected_Field__c</fullName>
        <description>This field is used to hold the value of selected sobject field.</description>
        <label>Selected Field Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__TeamName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RRD Team</label>
        <referenceTo>rrde__RRD_Teams__c</referenceTo>
        <relationshipLabel>Criteria Fields</relationshipLabel>
        <relationshipName>CriteriaFields</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Criteria Field</label>
    <listViews>
        <fullName>rrde__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>CriteriaFields Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Criteria Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rrde__Boolean_Value</fullName>
        <active>true</active>
        <description>This rule s used to validate boolean data type value.</description>
        <errorConditionFormula>rrde__Field_Data_Type__c=&apos;BOOLEAN&apos; &amp;&amp;  rrde__Field_Value__c != &apos;TRUE&apos; &amp;&amp;
rrde__Field_Value__c != &apos;FALSE&apos;</errorConditionFormula>
        <errorMessage>Please enter True or False in field value.If you select checkbox type field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rrde__Read_Only_Field</fullName>
        <active>false</active>
        <description>This validation rule is to make fieldread only after save.</description>
        <errorConditionFormula>OR(
ISCHANGED( Name ),
ISCHANGED(  rrde__Field_Value__c  ),
ISCHANGED (  rrde__Selected_Field__c ),
ISCHANGED (  rrde__SelectedObject__c ),
ISCHANGED (  rrde__TeamName__c  ),
ISCHANGED (  rrde__Field_Api_Name__c),
ISCHANGED (  rrde__Field_Data_Type__c)
)</errorConditionFormula>
        <errorMessage>You cannot edit this record. if changes required please create new one.</errorMessage>
    </validationRules>
</CustomObject>